Add subtitle and image preview for progress bar

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 </div>
 
                 <div id="progress-section">
+                    <img id="previewImage" src="images/output_1.jpg" width="100px" alt="">
                     <input
                         type="range"
                         id="progress-bar"
